--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-
-
 # OS generated files #
 ######################
 .DS_Store
@@ -10,3 +8,4 @@
 ehthumbs.db
 Thumbs.db
 .Rproj.user
+Coin_Flip.Rproj
